tests/ui/coherence/coherence-overlap-issue-23516.stderr
error[E0119]: conflicting implementations of trait `Sweet` for type `Box<i32>`
  --> $DIR/coherence-overlap-issue-23516.rs:10:1
   |
LL | impl<U:Sugar> Sweet for Box<U> { }
   | ------------------------------ first implementation here
...
LL | impl Sweet for Box<i32> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Box<i32>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
